--- a/public/css/cadastrologin.css
+++ b/public/css/cadastrologin.css
@@ -226,6 +226,7 @@ input[type="radio"]:checked {
     height: 5vh;
     width: 5vh;
     z-index: 1;
+    transition: 0.5s ease;
 }
 .logoutone{
     top: 1rem;
@@ -240,4 +241,5 @@ input[type="radio"]:checked {
 .logout:hover{
     background-color: red;
     transform: scale(0.9);
+    border-radius: 50%;
 }
