--- a/public/css/water-quiz.css
+++ b/public/css/water-quiz.css
@@ -5,6 +5,19 @@
     overflow-y: hidden;
 }
 
+.gif{
+    position: absolute;
+    top:2%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: url(../assets/giphy.gif);
+    background-position: center;
+    background-size: cover;
+    height: 35vh;
+    width: 35vh;
+}
+
+
 button {
     cursor: pointer;
 }
@@ -33,7 +46,7 @@ h1 {
 
 .container {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 
@@ -113,8 +126,9 @@ h1 {
 }
 
 .exit-button {
+    z-index: 2;
     position: absolute;
-    top: 20%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px 20px;
