--- a/public/dashboard/forum.css
+++ b/public/dashboard/forum.css
@@ -6,6 +6,24 @@
 }
 
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #060000;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #ffb700;
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #ca9100;
+}
+
+
 .material-symbols-outlined {
     font-variation-settings:
         'FILL' 0,
@@ -17,13 +35,14 @@
 body{
     overflow-x: hidden ;
     display: flex;
+    background-color: #000;
 }
 
 .menu {
     position: fixed;
     width: 20vw;
     height: 100vh;
-    background-color: rgb(255, 222, 184);
+    background-color: rgb(255, 140, 0);
     border-right: #000 5px solid;
     
 }
@@ -31,7 +50,7 @@ body{
 .user {
     height: 40vh;
     width: 20vw;
-    background-color: rgb(255, 222, 184);
+    background-color: rgb(255, 140, 0);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -64,6 +83,27 @@ body{
 
 a{
     color: #000;
+}
+
+.pagSelected{
+    color: #fff;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+}
+
+
+.miniAang{
+    position: absolute;
+    margin-left: 2rem;
+    left: 0;
+    height: 5vh;
+    width: 5vh;
+    background-image: url(../assets/miniAang.webp);
+    background-size: cover;
+    
 }
 
 .btn-user {
@@ -116,7 +156,12 @@ a{
 }
 
 .userBtn:hover {
-    color: #a10000;
+    color: #fff;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
 
 .info {
@@ -132,40 +177,53 @@ a{
 
 .content-forum {
     margin-left: 20vw;
+    min-height: 100vh;
     width: 80vw;
-    height:400vh;
-    background-color: blueviolet;
+    height:fit-content;
+    
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-color: rgb(0, 0, 0);
 }
 
 .container-msg-usuario {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 30vh;
-    width: 40vw;
-    background-color: rgb(129, 129, 129);
+    width: 80vw;
+    background-color: rgb(255, 255, 255);
     border-bottom: black solid 3px;
 }
 
 #container_msg_others{
-    height: 370vh;
-    width: 40vw;
-    background-color: rgb(129, 129, 129);
-    border-bottom: black solid 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 70vh;
+    height: fit-content;
+    width: 45vw;
+    background-image: url(../assets/wallElements.jpg);
+    background-size: 100% auto;
 }
 
 
 
 .box_msg {
-    margin-top: 3rem;
     height: 20vh;
     width: 40vw;
     background-color: rgb(150, 150, 150);
     border: 0.3rem solid black;
     border-radius: 4rem;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+ 
+}
+
+.usersMsg{
+    margin-top: 3rem;
 }
 
 .content-high-msg {
@@ -233,10 +291,7 @@ a{
     display: flex;
     justify-content: start;
     align-items: start;
-    white-space: normal; 
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    word-break: break-word;
+    
     line-height: 3vh;
     font-family: monospace;
     font-size: 1rem;
@@ -295,5 +350,5 @@ a{
 }
 
 .btn-msg:hover {
-    color: rgb(11, 0, 57);
+    color: #000;
 }
