--- a/public/dashboard/personalizar.css
+++ b/public/dashboard/personalizar.css
@@ -69,6 +69,16 @@ body {
     gap: 0.5rem;
 }
 
+.pagSelected{
+    color: #fff;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+}
+
+
 .miniAang{
     position: absolute;
     margin-left: 2rem;
@@ -80,14 +90,7 @@ body {
     
 }
 
-.pagSelected{
-    color: #fff;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
-}
+
 
 .btn-user {
     display: flex;
@@ -95,6 +98,7 @@ body {
     justify-content: space-around;
     height: 60vh;
     width: 20vw;
+    
 }
 
 .button-data {
@@ -136,7 +140,7 @@ body {
 }
 
 .userBtn:hover {
-
+   
     color: #fff;
     text-shadow:
         -1px -1px 0 #000,
@@ -145,167 +149,9 @@ body {
         1px 1px 0 #000;
 }
 
-.info {
-    display: flex;
-    flex-direction: column;
-}
 
 
-
-.data-content {
-    margin-left: 20vw;
-    width: 80vw;
-    height: 100vh;
-    display: flex;
-}
-
-
-.mid {
-    width: 60vw;
-    height: 100vh;
-}
-
-
-
-.high-kpis {
-    width: 60vw;
-    height: 40vh;
-    background-color: blue;
-    display: flex;
-}
-
-.high-txt {
-    text-align: center;
-    height: 10vh;
-    line-height: 5vh;
-    font-size: 1.7rem;
-    border-bottom: 2px solid black;
-    color: #fff;
-    text-shadow:
-        -2px -2px 0 #000,
-        2px -2px 0 #000,
-        -2px 2px 0 #000,
-        2px 2px 0 #000;
-}
-
-.high-red {
-    background-color: rgb(100, 0, 0);
-}
-
-.high-green {
-    background-color: rgb(0, 60, 0);
-}
-
-.high-data {
-    height: 30vh;
-    line-height: 30vh;
-    font-size: 8rem;
-    text-align: center;
-    color: #fff;
-    text-shadow:
-        -2px -2px 0 #000,
-        2px -2px 0 #000,
-        -2px 2px 0 #000,
-        2px 2px 0 #000;
-}
-
-.kpi-fire {
-    width: 30vw;
-    height: 40vh;
-    border: 1px solid black;
-    background-color: rgb(255, 0, 0);
-}
-
-.kpi-earth {
-    width: 30vw;
-    height: 40vh;
-    border: 1px solid black;
-    background-color: rgb(0, 128, 0);
-}
-
-
-.quiz-performance {
-    width: 60vw;
-    height: 60vh;
-    padding: 2rem;
-    background-color: rgba(2, 204, 204, 0.8);
-
-}
-
-/* KPI DE DOBRA FAVORITA   */
-
-.kpi-dobra {
-    width: 20vw;
-    height: 100vh;
-    background-color: rgb(0, 0, 0);
-}
-
-.txt-dobra {
-    text-align: center;
-    line-height: 10vh;
-    color: #000;
-    height: 10vh;
-    font-size: 2.5rem;
-    text-shadow:
-        -2px -2px 0 #fff,
-        2px -2px 0 #fff,
-        -2px 2px 0 #fff,
-        2px 2px 0 #fff;
-}
-
-.dobra-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000000;
-    height: 40vh;
-    padding: 1rem;
-}
-
-
-.dobra-legend {
-    height: 50vh;
-    background-color: #000000;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-
-    margin-left: 3rem;
-    flex-direction: column;
-    font-size: 1.5rem;
-}
-
-.container-legend {
-    height: 10vh;
-    width: 12vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-}
-
-.square {
-    height: 4vh;
-    width: 4vh;
-    border-radius: 50%;
-}
-
-.fire-square {
-    background-color: red;
-}
-
-.air-square {
-    background-color: white;
-}
-
-.water-square {
-    background-color: blue;
-}
-
-.earth-square {
-    background-color: green;
-}
-
+/* Personalizar */
 
 .personal-content {
     margin-left: 20vw;
@@ -575,3 +421,6 @@ input[type="radio"]:checked {
     transform: scale(0.8);
     cursor: pointer;
 }
+
+
+
