--- a/public/dashboard/ranking.css
+++ b/public/dashboard/ranking.css
@@ -1,55 +1,337 @@
-*{
-    overflow: hidden;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  text-decoration: none;
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    margin-left: 20vw;
-  }
-  
-  .section {
-    width: 80vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-  }
-  
-  .content {
+a {
+  color: #000;
+}
 
-    text-align: center;
-  }
-  
-  .btn-left,
-  .btn-right {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
-  }
-  
-  .btn-left {
-    left: 10px;
-  }
-  
-  .btn-right {
-    right: 10px;
-  }
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+
+
+.menu {
+  left: 0;
+  position: fixed;
+  width: 20vw;
+  height: 100vh;
+  background-color: rgb(255, 140, 0);
+  border-right: #000 5px solid;
+
+}
+
+.user {
+  height: 40vh;
+  width: 20vw;
+  background-color: rgb(255, 140, 0);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-right: #000 5px solid;
+
+}
+
+.photo {
+  margin-top: 2rem;
+  height: 25vh;
+  width: 25vh;
+  background-image: url(../assets/perfilIcon.png);
+  background-position: center;
+  background-size: cover;
+  border-radius: 360px;
+  border: 5px solid black;
+}
+
+.account {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 25vh;
+  height: 10vh;
+  padding: 2vh;
+  gap: 0.5rem;
+}
+
+.pagSelected {
+  color: #fff;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+
+.miniAang {
+  position: absolute;
+  margin-left: 2rem;
+  left: 0;
+  height: 5vh;
+  width: 5vh;
+  background-image: url(../assets/miniAang.webp);
+  background-size: cover;
+
+}
+
+
+
+.btn-user {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 60vh;
+  width: 20vw;
+
+}
+
+.button-data {
+  height: 10vh;
+  width: 20vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  gap: 1vw;
+  font-size: 1.5rem;
+
+}
+
+.button-style {
+  height: 10vh;
+  width: 20vw;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  gap: 1vw;
+  font-size: 1.5rem;
+
+}
+
+.button-exit {
+  height: 10vh;
+  width: 20vw;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  gap: 1vw;
+  font-size: 1.5rem;
+
+}
+
+.userBtn:hover {
+
+  color: #fff;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+
+
+
+
+.container {
+  margin-left: 20vw;
+}
+
+.section {
+  width: 80vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.btn-left,
+.btn-right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.btn-left {
+  left: 10px;
+}
+
+.btn-right {
+  right: 10px;
+}
 
 
 /* Estilos para diferenciar visualmente cada seção */
-#section1 { background-color: #3498db; }
-#section2 { background-color: #e74c3c; }
-#section3 { background-color: #2ecc71; }
-#section4 { background-color: #a0ba10; }
+#section1 {
+  background-color: rgb(145, 0, 0);
+}
+
+#section2 {
+  background-color: rgb(150, 150, 150);
+}
+
+#section3 {
+  background-color: rgb(0, 0, 145);
+}
+
+#section4 {
+  background-color: rgb(0, 145, 0);
+}
 
 
 
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  background-color: azure;
+  height: 100vh;
+  width: 60vw;
+
+}
+
+.txt-game {
+  font-family: 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: center;
+  position: absolute;
+  top: 3rem;
+  right: 13vw;
+  gap: 0.4rem;
+}
+
+.big-txt {
+  font-size: 3rem;
+}
+
+.small-txt {
+  font-size: 1.6rem;
+}
+
+.container-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  height: 100vh;
+  width: 15vw;
+  gap: 7vh;
+}
+
+.fotoWinner {
+  height: 25vh;
+  width: 25vh;
+  background-image: url(../assets/perfilIcon.png);
+  background-size: cover;
+  border: 5px solid black;
+  border-radius: 50%;
+}
+
+.towerWinnerTop1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  height: 67vh;
+  width: 15vw;
+  background-color: rgb(145, 0, 0);
+  border: 5px solid black;
+  border-bottom: none;
+}
+
+.towerWinnerTop2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  height: 55vh;
+  width: 15vw;
+  background-color: rgb(0, 0, 145);
+  border: 5px solid black;
+  border-bottom: none;
+}
+
+.towerWinnerTop3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  height: 40vh;
+  width: 15vw;
+  background-color: rgb(0, 145, 0);
+  border: 5px solid black;
+  border-bottom: none;
+}
+
+.fotoSimbolTop1 {
+  margin-top: 1vh;
+  height: 20vh;
+  width: 10vw;
+  background-image: url(../assets/trophyWinTop1.webp);
+  background-size: cover;
+}
+
+.winnerInfoTop1 {
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  height: 46vh;
+  color: #fff;
+  font-size: 2rem;
+}
+
+.fotoSimbolTop2 {
+  margin-top: 1vh;
+  height: 20vh;
+  width: 13vh;
+  background-image: url(../assets/medalTop2.webp);
+  background-size: cover;
+}
+
+.winnerInfoTop2 {
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  height: 32vh;
+  color: #fff;
+  font-size: 2rem;
+}
+
+.fotoSimbolTop3 {
+  margin-top: 0.5vh;
+  height: 19vh;
+  width: 13vh;
+  background-image: url(../assets/medalTop3.webp);
+  background-size: cover;
+}
+
+.winnerInfoTop3 {
+  padding-top: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  height: 20vh;
+  color: #fff;
+  font-size: 2rem;
+}
