--- a/public/css/air-catch.css
+++ b/public/css/air-catch.css
@@ -101,9 +101,9 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20rem;
-    height: 25rem;
-    background-image: linear-gradient(160deg, #00ff75 0%, #3700ff 100%);
+    width: 22rem;
+    height: 28rem;
+    background-image: linear-gradient(160deg, #f9f9f9 0%, #000000 100%);
     transition: all .3s;
     z-index: 2;
 }
@@ -113,8 +113,8 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 20rem;
-    height: 25rem;
+    width: 22rem;
+    height: 28rem;
     background: linear-gradient(to bottom, #f5f5f5, #2b2b2b, #1a1a1a);
     transition: all .2s;
     color: white;
@@ -126,35 +126,27 @@ body {
 }
 
 .card:hover {
-    box-shadow: 0px 0px 8rem 4rem rgba(0, 255, 117, 0.30);
+    box-shadow: 0px 0px 8rem 4rem rgba(0, 0, 0, 0.3);
     border-radius: 20px;
 }
 
 #flyAang {
     position: absolute;
-    top: 3%;
+    top: 1%;
     left: 50%;
     transform: translateX(-50%);
-    width: 10rem;
-    height: 10rem;
+    width: 8.5rem;
+    height: 8.5rem;
     background-image: url(../assets/aangMeditandoNoAr.gif);
     background-size: cover;
-}
-
-#start {
-    font-size: 2rem;
-}
-
-#start:hover {
-    color: red;
 }
 
 
 .exit {
     background-image: url(../assets/logout.svg);
     background-size: cover;
-    height: 5vh;
-    width: 5vh;
+    height: 6vh;
+    width: 6vh;
     transition: 0.3s ease;
 }
 
@@ -168,9 +160,9 @@ body {
     border: none;
     padding: 10px 20px;
     display: inline-block;
-    font-size: 15px;
+    font-size: 1.1rem;
     font-weight: 600;
-    width: 120px;
+    width: 10rem;
     text-transform: uppercase;
     cursor: pointer;
     transform: skew(-21deg);
