troca de 2 graficos e 2 KPIS para 1 grafico e 4 KPIS

--- a/public/dashboard/dashboard.css
+++ b/public/dashboard/dashboard.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
     text-decoration: none;
 }
 
@@ -32,7 +32,7 @@ body {
     height: 100vh;
     background-color: rgb(255, 140, 0);
     border-right: #000 5px solid;
-    
+
 }
 
 .user {
@@ -69,7 +69,7 @@ body {
     gap: 0.5rem;
 }
 
-.miniAang{
+.miniAang {
     position: absolute;
     margin-left: 2rem;
     left: 0;
@@ -77,10 +77,10 @@ body {
     width: 5vh;
     background-image: url(../assets/miniAang.webp);
     background-size: cover;
-    
+
 }
 
-.pagSelected{
+.pagSelected {
     color: #fff;
     text-shadow:
         -1px -1px 0 #000,
@@ -161,17 +161,26 @@ body {
 
 
 .mid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     width: 60vw;
     height: 100vh;
+    background-color: rgb(196, 179, 179);
+    padding: 1vh;
+    gap: 1vh;
 }
 
 
 
 .high-kpis {
-    width: 60vw;
-    height: 40vh;
-    background-color: blue;
     display: flex;
+
+    width: 59vw;
+    height: 48.5vh;
+
+    gap: 1vh;
 }
 
 .high-txt {
@@ -196,6 +205,14 @@ body {
     background-color: rgb(0, 60, 0);
 }
 
+.high-blue {
+    background-color: rgb(0, 0, 60);
+}
+
+.high-grey {
+    background-color: rgb(50, 50, 50);
+}
+
 .high-data {
     height: 30vh;
     line-height: 30vh;
@@ -210,25 +227,41 @@ body {
 }
 
 .kpi-fire {
-    width: 30vw;
-    height: 40vh;
+    width: 29.5vw;
+    height: 48.5vh;
     border: 1px solid black;
     background-color: rgb(255, 0, 0);
 }
 
 .kpi-earth {
-    width: 30vw;
-    height: 40vh;
+    width: 29.5vw;
+    height: 48.5vh;
     border: 1px solid black;
     background-color: rgb(0, 128, 0);
 }
 
+.kpi-air {
+    width: 29.5vw;
+    height: 48.5vh;
+    border: 1px solid black;
+    background-color: rgb(100, 100, 100);
+}
 
-.quiz-performance {
-    width: 60vw;
-    height: 60vh;
-    padding: 2rem;
-    background-color: rgba(2, 204, 204, 0.8);
+.kpi-water {
+    width: 29.5vw;
+    height: 48.5vh;
+    border: 1px solid black;
+    background-color: rgb(0, 0, 140);
+}
+
+
+
+.low-kpis {
+    width: 59vw;
+    height: 48.5vh;
+
+    display: flex;
+    gap: 1vh;
 
 }
 
