--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,6 +109,10 @@ nav {
     font-size: 0.9rem;
 }
 
+nav:hover{
+    backdrop-filter: blur(7px);
+}
+
 .scrolled {
     background-color: transparent;
     backdrop-filter: blur(3px);
@@ -308,7 +312,7 @@ nav a:hover {
 .txt-historia {
     width: 50vw;
     border: 0.3rem solid rgb(194, 3, 3);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     border-bottom: 0;
     border-top: 0;
     text-align: center;
@@ -756,6 +760,7 @@ nav a:hover {
     filter: drop-shadow(0px 0px 10px #000);
     overflow: hidden;
 }
+
 
 
     
