--- a/public/dashboard/personalizar.css
+++ b/public/dashboard/personalizar.css
@@ -30,7 +30,13 @@ body {
     position: fixed;
     width: 20vw;
     height: 100vh;
-    background-color: rgb(255, 140, 0);
+    background: linear-gradient(
+    to bottom,
+    rgb(200, 0, 0),
+    rgb(70, 70, 70),
+    rgb(0, 0, 200),
+    rgb(0,200, 0)
+);
     border-right: #000 5px solid;
 
 }
@@ -38,7 +44,7 @@ body {
 .user {
     height: 40vh;
     width: 20vw;
-    background-color: rgb(255, 140, 0);
+
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -67,6 +73,13 @@ body {
     height: 10vh;
     padding: 2vh;
     gap: 0.5rem;
+    font-size: 1.2rem;
+    color: #fff;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
 
 .pagSelected {
@@ -176,6 +189,8 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+
 }
 
 .btn-card {
@@ -523,4 +538,57 @@ input[type="radio"]:checked {
 .back:hover {
     transform: scale(0.8);
     cursor: pointer;
+}
+
+.login-card {
+    position: absolute;
+    left: 60%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 30vh;
+    width: 25vw;
+    background-color: #000;
+    border: 4px solid white;
+    border-radius: 3rem;
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+    z-index: 999;
+}
+
+.txt-card-login {
+    height: 20vh;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+
+.txt-card-login p {
+    font-size: 1.5rem;
+}
+
+
+.txt-card-login span {
+    width: 20vw;
+    font-size: 1.3rem;
+
+}
+
+.button-card-login {
+    height: 5vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 3rem;
+}
+
+.alert:hover {
+    color: #d10101;
 }
