--- a/public/dashboard/ranking.css
+++ b/public/dashboard/ranking.css
@@ -22,7 +22,13 @@ html {
   position: fixed;
   width: 20vw;
   height: 100vh;
-  background-color: rgb(255, 140, 0);
+  background: linear-gradient(
+    to bottom,
+    rgb(200, 0, 0),
+    rgb(70, 70, 70),
+    rgb(0, 0, 200),
+    rgb(0,200, 0)
+);
   border-right: #000 5px solid;
 
 }
@@ -30,7 +36,6 @@ html {
 .user {
   height: 40vh;
   width: 20vw;
-  background-color: rgb(255, 140, 0);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -58,7 +63,14 @@ html {
   width: 25vh;
   height: 10vh;
   padding: 2vh;
-  gap: 0.5rem;
+  gap: 0.2rem;
+  font-size: 1.2rem;
+  color: #fff;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
 
 .pagSelected {
@@ -180,19 +192,43 @@ html {
 
 /* Estilos para diferenciar visualmente cada seção */
 #section1 {
-  background-color: rgb(145, 0, 0);
+  background: linear-gradient(
+    to bottom,
+    rgb(255, 255, 255),
+    rgb(255, 175, 175),
+    rgb(240, 0, 0),
+    rgb(100, 0, 0)
+);
 }
 
 #section2 {
-  background-color: rgb(150, 150, 150);
+  background: linear-gradient(
+    to bottom,
+    rgb(255, 255, 255),
+    rgb(150, 150, 150),
+    rgb(75, 75, 75),
+    rgb(25, 25, 25)
+);
 }
 
 #section3 {
-  background-color: rgb(0, 0, 145);
+  background: linear-gradient(
+    to bottom,
+    rgb(255, 255, 255),
+    rgb(175, 175, 255),
+    rgb(0, 0, 240),
+    rgb(0, 0, 100)
+);
 }
 
 #section4 {
-  background-color: rgb(0, 145, 0);
+  background: linear-gradient(
+    to bottom,
+    rgb(255, 255, 255),
+    rgb(180, 255, 180),
+    rgb(0, 240, 0),
+    rgb(0, 100, 0)
+);
 }
 
 
@@ -201,18 +237,19 @@ html {
   display: flex;
   justify-content: center;
   align-items: end;
-  background-color: azure;
   height: 100vh;
   width: 60vw;
-
 }
+
+
+
 
 .txt-game {
   font-family: 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
   position: absolute;
   top: 3rem;
-  right: 13vw;
+  right: 6vw;
   gap: 0.4rem;
 }
 
@@ -334,4 +371,8 @@ html {
   height: 20vh;
   color: #fff;
   font-size: 2rem;
+}
+
+span{
+  text-align: center;
 }
