arrumando alguns bugs, alterações de css na dashboard0

--- a/public/css/atla.css
+++ b/public/css/atla.css
@@ -211,6 +211,8 @@
     align-items: center;
     text-align: center;
     color: #fff;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 
 }
 
