--- a/public/dashboard/personalizar.css
+++ b/public/dashboard/personalizar.css
@@ -441,7 +441,7 @@ body {
 }
 
 .sokka-picture {
-    background-image: url(../assets/sokkaIcon.jpg);
+    background-image: url(../assets/sokkaPerfilIcon.jpg);
 }
 
 .toph-picture {
