--- a/public/dashboard/dashboard.css
+++ b/public/dashboard/dashboard.css
@@ -522,7 +522,7 @@ body {
 }
 
 .sokka-picture {
-    background-image: url(../assets/sokkaIcon.jpg);
+    background-image: url(../assets/sokkaPerfilIcon.jpg);
 }
 
 .toph-picture {
