--- a/public/dashboard/forum.css
+++ b/public/dashboard/forum.css
@@ -94,16 +94,16 @@ body {
 }
 
 a {
-    color: #000;
+    color: #ffffff;
 }
 
 .pagSelected {
-    color: #fff;
+    color: #000000;
     text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
+        -1px -1px 0 #ffffff,
+        1px -1px 0 #ffffff,
+        -1px 1px 0 #ffffff,
+        1px 1px 0 #ffffff;
 }
 
 
@@ -119,12 +119,17 @@ a {
 }
 
 .btn-user {
+    color: #fff;
+    text-shadow:
+        -1px -1px 0 #000000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 60vh;
     width: 20vw;
-    color: #000;
 }
 
 
