--- a/public/dashboard/personalizar.css
+++ b/public/dashboard/personalizar.css
@@ -12,7 +12,7 @@
 
 
 a {
-    color: #000;
+    color: #ffffff;
 }
 
 body {
@@ -83,12 +83,12 @@ body {
 }
 
 .pagSelected {
-    color: #fff;
+    color: #000000;
     text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
+        -1px -1px 0 #ffffff,
+        1px -1px 0 #ffffff,
+        -1px 1px 0 #ffffff,
+        1px 1px 0 #ffffff;
 }
 
 
@@ -106,12 +106,17 @@ body {
 
 
 .btn-user {
+    color: #fff;
+    text-shadow:
+        -1px -1px 0 #000000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 60vh;
     width: 20vw;
-
 }
 
 .button-data {
