--- a/public/dashboard/ranking.css
+++ b/public/dashboard/ranking.css
@@ -7,7 +7,7 @@
 }
 
 a {
-  color: #000;
+  color: #ffffff;
 }
 
 body,
@@ -74,12 +74,12 @@ html {
 }
 
 .pagSelected {
-  color: #fff;
+  color: #000000;
   text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
+      -1px -1px 0 #ffffff,
+      1px -1px 0 #ffffff,
+      -1px 1px 0 #ffffff,
+      1px 1px 0 #ffffff;
 }
 
 
@@ -97,13 +97,19 @@ html {
 
 
 .btn-user {
+  color: #fff;
+  text-shadow:
+      -1px -1px 0 #000000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+      1px 1px 0 #000;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   height: 60vh;
   width: 20vw;
-
 }
+
 
 .button-data {
   height: 10vh;
